--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="public/css/basic.css">
     <link rel="stylesheet" href="public/css/index.css">
     <link rel="stylesheet" href="public/css/default-setting.css">
+    <link rel="stylesheet" href="public/css/complete.css">
 
 
 
@@ -17,13 +18,16 @@
     <script src="public/lib/angular/angular.js"></script>
     <script src="public/lib/angular-route/angular-route.js"></script>
     <script src="public/lib/angular-resource/angular-resource.js"></script>
+    <script src="public/js/Date.js"></script>
 
 
     <script src="app.global.js"></script>
 
     <script src="components/modal/index.js"></script>
+    <script src="components/loader/index.js"></script>
 
     <script src="modules/index/index.js"></script>
+    <script src="modules/index/complete.js"></script>
     <script src="modules/default-setting/index.js"></script>
 
     <script src="app.js"></script>
