--- a/modules/default-setting/index.html
+++ b/modules/default-setting/index.html
@@ -1,4 +1,4 @@
-<div class="default-setting">
+<div class="default-setting page-with-title">
     <div class="page-header">
         <div class="tools">
             <a href="#!/index">
