--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="public/css/index.css">
     <link rel="stylesheet" href="public/css/default-setting.css">
     <link rel="stylesheet" href="public/css/complete.css">
+    <link rel="stylesheet" href="public/css/store.css">
+    <link rel="stylesheet" href="public/css/order.css">
+    <link rel="stylesheet" href="public/css/membership.css">
 
 
 
@@ -20,16 +23,21 @@
     <script src="public/lib/angular-resource/angular-resource.js"></script>
     <script src="public/js/Date.js"></script>
 
-
-    <script src="app.global.js"></script>
-
     <script src="components/modal/index.js"></script>
     <script src="components/loader/index.js"></script>
+    <script src="components/price/index.js"></script>
+    <script src="components/rating/index.js"></script>
 
-    <script src="modules/index/index.js"></script>
-    <script src="modules/index/complete.js"></script>
-    <script src="modules/default-setting/index.js"></script>
+    <script src="modules/appointment/controller/index.js"></script>
+    <script src="modules/appointment/controller/complete.js"></script>
+    <script src="modules/appointment/controller/preference.js"></script>
+    <script src="modules/appointment/controller/orders.js"></script>
+    <script src="modules/store/controller/index.js"></script>
+    <script src="modules/membership/controller/index.js"></script>
 
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=TLebOUAMLbNgLCz0HZMuVfNA"></script>
+
+    <script src="app.global.js"></script>
     <script src="app.js"></script>
 
 
