--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="modules/appointment/controller/orders.js"></script>
     <script src="modules/store/controller/index.js"></script>
     <script src="modules/membership/controller/index.js"></script>
+    <script src="modules/membership/controller/package.js"></script>
 
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=TLebOUAMLbNgLCz0HZMuVfNA"></script>
 
