--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>预约洗车</title>
+
+
+    <!-- build:css public/css/style.css -->
     <link rel="stylesheet" href="public/lib/semantic/dist/semantic.css">
     <link rel="stylesheet" href="public/css/basic.css">
     <link rel="stylesheet" href="public/css/index.css">
@@ -12,9 +15,9 @@
     <link rel="stylesheet" href="public/css/store.css">
     <link rel="stylesheet" href="public/css/order.css">
     <link rel="stylesheet" href="public/css/membership.css">
+    <!-- endbuild -->
 
-
-
+    <!-- build:js app.js -->
     <script src="public/lib/jquery/dist/jquery.js"></script>
     <script src="public/lib/semantic/dist/semantic.js"></script>
 
@@ -36,10 +39,12 @@
     <script src="modules/membership/controller/index.js"></script>
     <script src="modules/membership/controller/package.js"></script>
 
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=TLebOUAMLbNgLCz0HZMuVfNA"></script>
 
     <script src="app.global.js"></script>
     <script src="app.js"></script>
+    <!-- endbuild -->
+
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=TLebOUAMLbNgLCz0HZMuVfNA"></script>
 
 
 </head>
