--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <!-- build:js app.js -->
     <script src="public/lib/jquery/dist/jquery.js"></script>
     <script src="public/lib/semantic/dist/semantic.js"></script>
+    <script src="public/lib/crypto-js/crypto-js.js"></script>
+
 
     <script src="public/lib/angular/angular.js"></script>
     <script src="public/lib/angular-route/angular-route.js"></script>
@@ -36,6 +38,7 @@
     <script src="modules/appointment/controller/preference.js"></script>
     <script src="modules/appointment/controller/orders.js"></script>
     <script src="modules/store/controller/index.js"></script>
+    <script src="modules/store/controller/map.js"></script>
     <script src="modules/membership/controller/index.js"></script>
     <script src="modules/membership/controller/package.js"></script>
 
@@ -43,7 +46,7 @@
     <script src="app.global.js"></script>
     <script src="app.js"></script>
     <!-- endbuild -->
-
+    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js" type="text/javascript"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=TLebOUAMLbNgLCz0HZMuVfNA"></script>
 
 
