--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="format-detection" content="telephone=no" />
     <title>预约洗车</title>
 
 
@@ -26,6 +27,8 @@
     <script src="public/lib/angular/angular.js"></script>
     <script src="public/lib/angular-route/angular-route.js"></script>
     <script src="public/lib/angular-resource/angular-resource.js"></script>
+    <script src="public/lib/angular-sanitize/angular-sanitize.js"></script>
+
     <script src="public/js/Date.js"></script>
 
     <script src="components/modal/index.js"></script>
@@ -38,7 +41,7 @@
     <script src="modules/appointment/controller/preference.js"></script>
     <script src="modules/appointment/controller/orders.js"></script>
     <script src="modules/store/controller/index.js"></script>
-    <script src="modules/store/controller/map.js"></script>
+    <script src="modules/store/controller/list.js"></script>
     <script src="modules/membership/controller/index.js"></script>
     <script src="modules/membership/controller/package.js"></script>
 
@@ -48,7 +51,6 @@
     <!-- endbuild -->
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js" type="text/javascript"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=TLebOUAMLbNgLCz0HZMuVfNA"></script>
-
 
 </head>
 <body>
