--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <!-- build:css public/css/style.css -->
     <link rel="stylesheet" href="public/lib/semantic/dist/semantic.css">
+    <link rel="stylesheet" href="public/lib/intro.js/introjs.css">
+
     <link rel="stylesheet" href="public/css/basic.css">
     <link rel="stylesheet" href="public/css/index.css">
     <link rel="stylesheet" href="public/css/default-setting.css">
@@ -22,12 +24,15 @@
     <script src="public/lib/jquery/dist/jquery.js"></script>
     <script src="public/lib/semantic/dist/semantic.js"></script>
     <script src="public/lib/crypto-js/crypto-js.js"></script>
+    <script src="public/lib/intro.js/intro.js"></script>
+
 
 
     <script src="public/lib/angular/angular.js"></script>
     <script src="public/lib/angular-route/angular-route.js"></script>
     <script src="public/lib/angular-resource/angular-resource.js"></script>
     <script src="public/lib/angular-sanitize/angular-sanitize.js"></script>
+    <script src="public/lib/angular-cookies/angular-cookies.js"></script>
 
     <script src="public/js/Date.js"></script>
 
