--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="format-detection" content="telephone=no" />
-    <title>预约洗车</title>
+    <title>速途汽车服务</title>
 
 
     <!-- build:css public/css/style.css -->
